Fix styling on firefox

--- a/packages/scrabble-solver/src/components/BoardV2/BoardV2.module.scss
+++ b/packages/scrabble-solver/src/components/BoardV2/BoardV2.module.scss
@@ -1,29 +1,31 @@
 .input {
+  width: 100%;
+  height: 100%;
   border: none;
-  box-sizing: content-box;
+  box-sizing: border-box;
 
   // temporary:
   position: absolute;
-  inset: 0;
   top: 1px;
   left: 1px;
   right: 0;
   bottom: 0;
-  opacity: 0.5;
+  opacity: 0;
 
   &:focus {
     outline: none;
   }
 
-  // font-size: 0;
+  color: transparent;
 
   &::selection {
-    // background: transparent;
+    background: transparent;
   }
 }
 
 .focusedCell {
   position: absolute;
   border: 1px solid red;
+  outline: 1px solid red;
   pointer-events: none;
 }
